--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -10,7 +10,8 @@ img,
 .slide-content,
 .plan,
 .card,
-.item-wrapper {
+.item-wrapper,
+.item-wrapper .mbr-overlay {
   border-radius: 2rem !important;
 }
 .video-wrapper {
@@ -773,6 +774,11 @@ a {
     padding-right: 16px;
   }
 }
+*:focus-visible {
+  outline: red solid 2px !important;
+  outline-offset: 2px !important;
+  transition: outline 0.2s ease-in-out;
+}
 .cid-uWx9fzitW8 {
   padding-top: 1rem;
   padding-bottom: 0rem;
@@ -1131,334 +1137,6 @@ a {
 }
 .cid-uWvyFVXxA3 .mbr-section-subtitle P {
   text-align: center;
-}
-.cid-uWvGvSzNM8 {
-  padding-top: 0rem;
-  padding-bottom: 1rem;
-  background-color: #ffffff;
-}
-.cid-uWvGvSzNM8 .mbr-media {
-  position: relative;
-}
-.cid-uWvGvSzNM8 .mbr-media img {
-  width: 100%;
-  object-fit: cover;
-}
-.cid-uWvGvSzNM8 a:hover {
-  background-image: none !important;
-}
-.cid-uWvGvSzNM8 .icon-wrap {
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  position: absolute;
-}
-.cid-uWvGvSzNM8 .mbr-media span {
-  font-size: 5rem;
-  transition: all 0.2s;
-}
-.cid-uWvGvSzNM8 .modalWindow {
-  position: fixed;
-  z-index: 5000;
-  left: 0;
-  top: 0;
-  background-color: rgba(61, 61, 61, 0.65);
-  width: 100%;
-  height: 100%;
-}
-.cid-uWvGvSzNM8 .modalWindow .modalWindow-container {
-  display: table-cell;
-  vertical-align: middle;
-}
-.cid-uWvGvSzNM8 .modalWindow .modalWindow-video {
-  height: calc(44.9943757vw);
-  width: 80vw;
-  margin: 0 auto;
-}
-.cid-uWvGvSzNM8 .close {
-  position: fixed;
-  opacity: 0.5;
-  font-size: 1.5rem;
-  font-weight: 300;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  color: #fff;
-  top: 2.5rem;
-  right: 2.5rem;
-  border: 2px solid #fff;
-  text-shadow: none;
-  z-index: 5;
-  transition: opacity 0.3s ease;
-  align-items: center;
-  justify-content: center;
-  display: flex;
-}
-.cid-uWvGvSzNM8 .close:hover {
-  opacity: 1;
-  background: #000;
-  color: #fff;
-}
-.cid-uWvGvSzNM8 .mbr-fallback-image.disabled {
-  display: none;
-}
-.cid-uWvGvSzNM8 .mbr-fallback-image {
-  display: block;
-  background-size: cover;
-  background-position: center center;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-}
-.cid-uWvGvSzNM8 .content-head {
-  max-width: 800px;
-}
-.cid-uWvTBnxmlr {
-  padding-top: 0rem;
-  padding-bottom: 1rem;
-  background-color: #ffffff;
-}
-.cid-uWvTBnxmlr .mbr-media {
-  position: relative;
-}
-.cid-uWvTBnxmlr .mbr-media img {
-  width: 100%;
-  object-fit: cover;
-}
-.cid-uWvTBnxmlr a:hover {
-  background-image: none !important;
-}
-.cid-uWvTBnxmlr .icon-wrap {
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  position: absolute;
-}
-.cid-uWvTBnxmlr .mbr-media span {
-  font-size: 5rem;
-  transition: all 0.2s;
-}
-.cid-uWvTBnxmlr .modalWindow {
-  position: fixed;
-  z-index: 5000;
-  left: 0;
-  top: 0;
-  background-color: rgba(61, 61, 61, 0.65);
-  width: 100%;
-  height: 100%;
-}
-.cid-uWvTBnxmlr .modalWindow .modalWindow-container {
-  display: table-cell;
-  vertical-align: middle;
-}
-.cid-uWvTBnxmlr .modalWindow .modalWindow-video {
-  height: calc(44.9943757vw);
-  width: 80vw;
-  margin: 0 auto;
-}
-.cid-uWvTBnxmlr .close {
-  position: fixed;
-  opacity: 0.5;
-  font-size: 1.5rem;
-  font-weight: 300;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  color: #fff;
-  top: 2.5rem;
-  right: 2.5rem;
-  border: 2px solid #fff;
-  text-shadow: none;
-  z-index: 5;
-  transition: opacity 0.3s ease;
-  align-items: center;
-  justify-content: center;
-  display: flex;
-}
-.cid-uWvTBnxmlr .close:hover {
-  opacity: 1;
-  background: #000;
-  color: #fff;
-}
-.cid-uWvTBnxmlr .mbr-fallback-image.disabled {
-  display: none;
-}
-.cid-uWvTBnxmlr .mbr-fallback-image {
-  display: block;
-  background-size: cover;
-  background-position: center center;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-}
-.cid-uWvTBnxmlr .content-head {
-  max-width: 800px;
-}
-.cid-uWvz7IV0XF {
-  padding-top: 0rem;
-  padding-bottom: 1rem;
-  background-color: #ffffff;
-}
-.cid-uWvz7IV0XF .mbr-media {
-  position: relative;
-}
-.cid-uWvz7IV0XF .mbr-media img {
-  width: 100%;
-  object-fit: cover;
-}
-.cid-uWvz7IV0XF a:hover {
-  background-image: none !important;
-}
-.cid-uWvz7IV0XF .icon-wrap {
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  position: absolute;
-}
-.cid-uWvz7IV0XF .mbr-media span {
-  font-size: 5rem;
-  transition: all 0.2s;
-}
-.cid-uWvz7IV0XF .modalWindow {
-  position: fixed;
-  z-index: 5000;
-  left: 0;
-  top: 0;
-  background-color: rgba(61, 61, 61, 0.65);
-  width: 100%;
-  height: 100%;
-}
-.cid-uWvz7IV0XF .modalWindow .modalWindow-container {
-  display: table-cell;
-  vertical-align: middle;
-}
-.cid-uWvz7IV0XF .modalWindow .modalWindow-video {
-  height: calc(44.9943757vw);
-  width: 80vw;
-  margin: 0 auto;
-}
-.cid-uWvz7IV0XF .close {
-  position: fixed;
-  opacity: 0.5;
-  font-size: 1.5rem;
-  font-weight: 300;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  color: #fff;
-  top: 2.5rem;
-  right: 2.5rem;
-  border: 2px solid #fff;
-  text-shadow: none;
-  z-index: 5;
-  transition: opacity 0.3s ease;
-  align-items: center;
-  justify-content: center;
-  display: flex;
-}
-.cid-uWvz7IV0XF .close:hover {
-  opacity: 1;
-  background: #000;
-  color: #fff;
-}
-.cid-uWvz7IV0XF .mbr-fallback-image.disabled {
-  display: none;
-}
-.cid-uWvz7IV0XF .mbr-fallback-image {
-  display: block;
-  background-size: cover;
-  background-position: center center;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-}
-.cid-uWvz7IV0XF .content-head {
-  max-width: 800px;
-}
-.cid-uWvUZcZuh4 {
-  padding-top: 0rem;
-  padding-bottom: 3rem;
-  background-color: #ffffff;
-}
-.cid-uWvUZcZuh4 .mbr-media {
-  position: relative;
-}
-.cid-uWvUZcZuh4 .mbr-media img {
-  width: 100%;
-  object-fit: cover;
-}
-.cid-uWvUZcZuh4 a:hover {
-  background-image: none !important;
-}
-.cid-uWvUZcZuh4 .icon-wrap {
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  position: absolute;
-}
-.cid-uWvUZcZuh4 .mbr-media span {
-  font-size: 5rem;
-  transition: all 0.2s;
-}
-.cid-uWvUZcZuh4 .modalWindow {
-  position: fixed;
-  z-index: 5000;
-  left: 0;
-  top: 0;
-  background-color: rgba(61, 61, 61, 0.65);
-  width: 100%;
-  height: 100%;
-}
-.cid-uWvUZcZuh4 .modalWindow .modalWindow-container {
-  display: table-cell;
-  vertical-align: middle;
-}
-.cid-uWvUZcZuh4 .modalWindow .modalWindow-video {
-  height: calc(44.9943757vw);
-  width: 80vw;
-  margin: 0 auto;
-}
-.cid-uWvUZcZuh4 .close {
-  position: fixed;
-  opacity: 0.5;
-  font-size: 1.5rem;
-  font-weight: 300;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  color: #fff;
-  top: 2.5rem;
-  right: 2.5rem;
-  border: 2px solid #fff;
-  text-shadow: none;
-  z-index: 5;
-  transition: opacity 0.3s ease;
-  align-items: center;
-  justify-content: center;
-  display: flex;
-}
-.cid-uWvUZcZuh4 .close:hover {
-  opacity: 1;
-  background: #000;
-  color: #fff;
-}
-.cid-uWvUZcZuh4 .mbr-fallback-image.disabled {
-  display: none;
-}
-.cid-uWvUZcZuh4 .mbr-fallback-image {
-  display: block;
-  background-size: cover;
-  background-position: center center;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-}
-.cid-uWvUZcZuh4 .content-head {
-  max-width: 800px;
 }
 .cid-uWHTpoKEqG {
   padding-top: 2rem;
